kubernetes/infrastructure/keycloak/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: keycloak-operator
---
apiVersion: v1
kind: Namespace
metadata:
  name: keycloak-operator-role-binding
---
apiVersion: v1
kind: Namespace
metadata:
  name: keycloak-operator-role
---
apiVersion: v1
kind: Namespace
metadata:
  name: keycloak
